--- a/OctagonPlatform/Views/PartnerContacts/Details.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Details.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Contact Info</h2>
+<h3  class="alert-info">Contact Info</h3>
 
 <div class="form-group">
 
