--- a/OctagonPlatform/Views/Partners/Delete.cshtml
+++ b/OctagonPlatform/Views/Partners/Delete.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Delete</h2>
+<h3 class="alert-danger">Delete</h3>
 
 <h3 class="alert-warning">Are you sure you want to delete this?</h3>
 <div>
@@ -111,7 +111,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <input type="submit" value="Delete" class="btn btn-primary" /> |
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
