--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Partner <strong class="alert-info">@Model.BusinessName</strong></h2>
+<h3  class="alert-info">Partner: <strong class="alert-link">@Model.BusinessName</strong></h3>
 <br />
 <hr />
 <br />
