--- a/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model OctagonPlatform.Models.Partner
 
-<h3>Terminals</h3>
+<h3 class="alert-info">Terminals</h3>
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         
@@ -18,9 +18,7 @@
                                        htmlAttributes: null
                                        )</li>
             </ul>
-            <div class="form-group">
-                <input type="text" class="form-control" id="searchTerminal" placeholder="Search" name="search" />
-            </div> 
+            
         </div>
     </div>
 </nav>
