--- a/OctagonPlatform/Views/PartnerContacts/Create.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Create Contact</h2>
+<h3 class="alert-info">Create Contact</h3>
 
 @using (Html.BeginForm("Create", "PartnerContacts"))
 {
@@ -105,8 +105,8 @@
     </div>
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-            <button type="submit" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
