--- a/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Edit Contact</h2>
+<h3  class="alert-info">Edit Contact</h3>
 
 @using (Html.BeginForm("Edit", "PartnerContacts"))
 {
@@ -112,8 +112,8 @@
     </div>
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-            <button type="submit" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
