--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Create Partner</h2>
+<h3 class="alert-info">Create Partner</h3>
 
 @using (Html.BeginForm("Create", "Partners"))
 {
@@ -112,7 +112,7 @@
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
