--- a/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
@@ -1,5 +1,5 @@
 ﻿@model OctagonPlatform.Models.Partner
-<h3>Bank Accounts</h3>
+<h3  class="alert-info">Bank Accounts</h3>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
