--- a/OctagonPlatform/Views/Partners/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Contacts.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OctagonPlatform.Models.Partner
 
-<h3>Contacts</h3>
+<h3 class="alert-info">Contacts</h3>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
