--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -1,22 +1,7 @@
 ﻿@model OctagonPlatform.Models.Partner
 
-<h3>General Info</h3>
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-        <li class="active">@Html.ActionLink(
-                               linkText: "Edit",
-                               actionName: "Edit",
-                               controllerName: "Partners",
-                               routeValues: new {
-                                   Id = Model.Id
-                               },
-                               htmlAttributes: null
-                               )</li>
+<h3  class="alert-info">General Info</h3>
 
-
-    </ul>
-            
-</div>
 <div class="form-group">
 
     <label class="label-column">Business Name: @Model.BusinessName</label>
@@ -62,4 +47,23 @@
 </div>
 <div class="form-group">
     <label class="label-column">Mobile: @Model.Mobile</label>
+</div>
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+        <li class="active">
+            @Html.ActionLink(
+                               linkText: "Edit",
+                               actionName: "Edit",
+                               controllerName: "Partners",
+                               routeValues: new
+                               {
+                                   Id = Model.Id
+                               },
+                               htmlAttributes: new {@class = "btn btn-primary"}
+                               )
+    </li>
+
+
+</ul>
+
 </div>
