--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -2,7 +2,7 @@
 @model OctagonPlatform.Models.Partner
 
 
-<h3>Partners</h3>
+<h3  class="alert-info">Partners</h3>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         
@@ -19,9 +19,7 @@
                                        htmlAttributes: null
                                        )</li>
             </ul>
-            <div class="form-group">
-                <input type="text" class="form-control" id="searchPartner" placeholder="Search" name="search" />
-            </div> 
+            
         </div>
     </div>
 </nav>
