--- a/OctagonPlatform/Views/Partners/Sections/Users.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Users.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OctagonPlatform.Models.Partner
 
-<h3>Users</h3>
+<h3 class="alert-info">Users</h3>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -53,33 +53,37 @@
                     <td>@item.Email</td>
                     <td>@item.Status</td>
                     
-                    <td>
-                        @Html.ActionLink(
-                        linkText: "Edit",
-                        actionName: "Edit",
-                        controllerName: "Users",
-                        routeValues: new
-                        {
-                            id = item.Id
-                        },
-                        htmlAttributes: null
-                        )
-                </td>
-                    <td>
-                        @Html.ActionLink("Delete", "Delete", "Users", new { id = item.Id, partnerId = Model.Id }, new { onclick = "return confirm('Are sure wants to delete?');" })
+                    <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                    linkText: "Edit",
+                                                                    actionName: "Edit",
+                                                                    controllerName: "Users",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )</td>
+                    <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                     linkText: "Delete",
+                                                                     actionName: "Delete",
+                                                                     controllerName: "Users",
+                                                                     routeValues: new
+                                                                     {
+                                                                         id = item.Id
+                                                                     },
+                                                                     htmlAttributes: null
+                                                                     )
                     </td>
-                    <td>
-                        @Html.ActionLink(
-                            linkText: "Details",
-                            actionName: "Details",
-                            controllerName: "Users",
-                            routeValues: new
-                            {
-                                id = item.Id
-                            },
-                            htmlAttributes: null
-                            )
-                    </td>
+                    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                        linkText: "Details",
+                                                                        actionName: "Details",
+                                                                        controllerName: "Users",
+                                                                        routeValues: new
+                                                                        {
+                                                                            id = item.Id
+                                                                        },
+                                                                        htmlAttributes: null
+                                                                        )</td>
             </tr>
             }
         }
