--- a/OctagonPlatform/Views/TerminalContacts/Create.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Create Contact</h2>
+<h3 class="alert-info">Create Contact</h3>
 
 @using (Html.BeginForm("Create", "TerminalContacts"))
 {
@@ -109,7 +109,7 @@
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
             <button type="submit" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
