--- a/OctagonPlatform/Views/TerminalContacts/Delete.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Delete Contact</h2>
+<h3 class="alert-danger">Delete Contact</h3>
 
 <h3 class="alert-warning">Are you sure you want to delete this?</h3>
 <div>
