--- a/OctagonPlatform/Views/TerminalContacts/Edit.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Edit Contact</h2>
+<h3 class="alert-info">Edit Contact</h3>
 
 @using (Html.BeginForm("Edit", "TerminalContacts"))
 {
@@ -113,7 +113,7 @@
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
