--- a/OctagonPlatform/Views/TerminalContacts/Index.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>List Contacts</h2>
+<h3 class="alert-info">List Contacts</h3>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
 
