--- a/OctagonPlatform/Views/Terminals/Edit.cshtml
+++ b/OctagonPlatform/Views/Terminals/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Edit Terminal</h2>
+<h3 class="alert-info">Edit Terminal</h3>
 
 @using (Html.BeginForm("Edit", "Terminals"))
 {
@@ -177,9 +177,9 @@
             @Html.ValidationMessageFor(m => m.InstalledDate)
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.ChargedBy)
-            @Html.TextBoxFor(m => m.ChargedBy, new { @class = "form-control", autofocus = "autofocus", placeholder = "Leo" })
-            @Html.ValidationMessageFor(m => m.ChargedBy)
+            @Html.LabelFor(m => m.LoadedBy)
+            @Html.TextBoxFor(m => m.LoadedBy, new { @class = "form-control", autofocus = "autofocus", placeholder = "Leo" })
+            @Html.ValidationMessageFor(m => m.LoadedBy)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Balance)
@@ -195,7 +195,7 @@
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
 }
