--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Terminals</h2>
+<h3 class="alert-info">Terminals</h3>
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         
