--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -4,13 +4,14 @@
     ViewBag.Title = "Add User";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
+<h3 class="alert-info">Create User</h3>
 @using (Html.BeginForm("Create", "Users"))
 {
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
+        @ViewBag.Error
+        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
     </p>
-
     if (!string.IsNullOrEmpty(Model.Error))
     {
         <div class="alert alert-danger">
@@ -69,8 +70,6 @@
         @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
         @Html.ValidationMessageFor(m => m.IsLocked)
     </div>
-
-    <button type="submit" class="btn btn-primary">Save</button>
    
     <table class="table table-striped table-hover ">
         <thead>
@@ -102,7 +101,12 @@
             }
 
     </table>
-    
+    <div class="form-group">
+        <div class="col-lg-10 col-lg-offset-2">
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+    </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
