--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -4,11 +4,13 @@
     ViewBag.Title = "Edit User";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
+<h3 class="alert-info">Edit User</h3>
 @using (Html.BeginForm("Edit", "Users"))
 {
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
+        @ViewBag.Error
+        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
     </p>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
@@ -67,79 +69,83 @@
         @Html.ValidationMessageFor(m => m.IsLocked)
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-
     <table class="table table-striped table-hover ">
         <thead>
-            <tr>
-                <th>SetOf</th>
-                <th>All</th>
-                <th>Create</th>
-                <th>View</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
+        <tr>
+            <th>SetOf</th>
+            <th>All</th>
+            <th>Create</th>
+            <th>View</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.SetOfPermissions)       //Recorro cada uno de los grupos de permisos.
+        @foreach (var item in Model.SetOfPermissions)       //Recorro cada uno de los grupos de permisos.
+        {
+            var temp = false;
+            var type = "";
+            var cheqCreate = "";
+            var cheqView = "";
+            var cheqEdit = "";
+            var cheqDelete = "";
+            foreach (var toCheck in Model.Permissions)      //recorro cada uno de los permisos que tiene el usuario.
             {
-                var temp = false;
-                var type = "";
-                var cheqCreate = "";
-                var cheqView = "";
-                var cheqEdit = "";
-                var cheqDelete = "";
-                foreach (var toCheck in Model.Permissions)      //recorro cada uno de los permisos que tiene el usuario.
-                {
-                    if (toCheck.Id == 7)
-                    { 
+                if (toCheck.Id == 7)
+                { 
 
-                    }
-                    temp = item.Permissions.Contains(toCheck);  //true si el recorrido de todos los permisos se encuentra slguno de los permisos que tiene el usuario.
-                    type = toCheck.Type;
-                    if (temp)
-                    {
-                        if (type == "Create")
-                        {
-                            cheqCreate= "checked";
-                        }
-                        if (type == "View")
-                        {
-                            cheqView= "checked";
-                        }
-                        if (type == "Edit")
-                        {
-                            cheqEdit= "checked";
-                        }
-                        if (type == "Delete")
-                        {
-                            cheqDelete= "checked";
-                        }
-                        //break;
-                    }
                 }
-                <tr>
-                    <td>@Html.Label(item.Name)</td>
-                    <td><input type="checkbox" name="Permissions1" value=" " /></td>
-                    <td><input type="checkbox" { @cheqCreate ; } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
-                    <td><input type="checkbox" { @cheqView } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
-                    <td><input type="checkbox" { @cheqEdit } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
-                    <td><input type="checkbox" { @cheqDelete } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
+                temp = item.Permissions.Contains(toCheck);  //true si el recorrido de todos los permisos se encuentra slguno de los permisos que tiene el usuario.
+                type = toCheck.Type;
+                if (temp)
+                {
+                    if (type == "Create")
+                    {
+                        cheqCreate= "checked";
+                    }
+                    if (type == "View")
+                    {
+                        cheqView= "checked";
+                    }
+                    if (type == "Edit")
+                    {
+                        cheqEdit= "checked";
+                    }
+                    if (type == "Delete")
+                    {
+                        cheqDelete= "checked";
+                    }
+                    //break;
+                }
+            }
+            <tr>
+                <td>@Html.Label(item.Name)</td>
+                <td><input type="checkbox" name="Permissions1" value=" " /></td>
+                <td><input type="checkbox" { @cheqCreate ; } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
+                <td><input type="checkbox" { @cheqView } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
+                <td><input type="checkbox" { @cheqEdit } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
+                <td><input type="checkbox" { @cheqDelete } name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
 
-                    @*<td><input type="checkbox" name="Permissions1" value=" " /></td>
+                @*<td><input type="checkbox" name="Permissions1" value=" " /></td>
                         <td><input type="checkbox" checked="@item.Selected" name="Permissions1" value="@if (item.Type == "Create") { item.Value.ToString(); } " /></td>
                         <td><input type="checkbox" checked="@item.Selected" name="Permissions1" value="@if (item.Type == "View") { item.Value.ToString(); } " /></td>
                         <td><input type="checkbox" checked="@item.Selected" name="Permissions1" value="@if (item.Type == "Edit") { item.Value.ToString(); } " /></td>
                         <td><input type="checkbox" checked="@item.Selected" name="Permissions1" value="@if (item.Type == "Delete") { item.Value.ToString(); } " /></td>*@
 
-                    @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
+                @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
                         <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Name)</td>
                         <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Edit").Name)</td>
                         <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Delete").Name)</td>*@
-                </tr>
-            }
+            </tr>
+        }
 
     </table>
+    <div class="form-group">
+        <div class="col-lg-10 col-lg-offset-2">
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+    </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
