--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -4,15 +4,31 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<div class="form-group">
-    <input type="text" class="form-control" id="searchUser" placeholder="Search" name="search" />
+<h3 class="alert-info">Users</h3>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    @Html.ActionLink(
+                                       linkText: "Add User",
+                                       actionName: "Create",
+                                       controllerName: "Users",
+                                       routeValues: new
+                                       {
+                                           partnerId = 1
+                                       },
+                                       htmlAttributes: null
+                                       )
+            </li>
+        </ul>
+        <div class="form-group">
+            <input type="text" class="form-control" id="searchTerminal" placeholder="Search" name="search" />
+        </div>
+    </div>
 </div>
-<div class="page-header">
-    <h3 class="panel-title">List Users</h3>
-</div>
-<p>
-    @Html.ActionLink("Add User", "Create", "Users", routeValues:null, htmlAttributes: new{@class = "glyphicon glyphicon-plus-sign" })
-</p>
+</nav>
 <table class="table table-striped table-hover ">
     <thead>
     <tr>
@@ -34,10 +50,10 @@
             <td>@item.Phone</td>
             <td>@item.Email</td>
             <td>@item.Status</td>
-            <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-            <td>@Html.ActionLink("Delete", "Delete", new {id = item.Id},
-                                                                 new {onclick = "return confirm('Are sure wants to delete?');"})</td>
-            <td>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
+            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+            <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
+            </td>
+            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
         </tr>
     }
     
