Arreglando BankAccount Edit y Add, Agregue FixAmmount a Terminales

--- a/OctagonPlatform/Views/BankAccount/Details.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.City.Name)
+            City
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Country.Name)
+            Country
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.State.Name)
+            State
         </dt>
 
         <dd>
@@ -162,7 +162,7 @@
             htmlAttributes: new
             {
                 @type = "submit",
-                @class = "btn btn-warning"
+                @class = "btn btn-primary"
 
             }
             )
