--- a/OctagonPlatform/Views/Terminals/Delete.cshtml
+++ b/OctagonPlatform/Views/Terminals/Delete.cshtml
@@ -170,11 +170,11 @@
     </dd>
 
     <dt>
-        @Html.DisplayNameFor(model => model.SurchargeAmmount)
+        @Html.DisplayNameFor(model => model.FixAmmount)
     </dt>
 
     <dd>
-        @Html.DisplayFor(model => model.SurchargeAmmount)
+        @Html.DisplayFor(model => model.FixAmmount)
     </dd>
 
     <dt>
@@ -193,11 +193,11 @@
     </dd>
 
     <dt>
-        @Html.DisplayNameFor(model => model.InterChangeAmmount)
+        @Html.DisplayNameFor(model => model.InterChangeAmount)
     </dt>
 
     <dd>
-        @Html.DisplayFor(model => model.InterChangeAmmount)
+        @Html.DisplayFor(model => model.InterChangeAmount)
     </dd>
 
     <dt>
@@ -209,11 +209,11 @@
     </dd>
 
     <dt>
-        @Html.DisplayNameFor(model => model.CryptoPercentChargeAmmount)
+        @Html.DisplayNameFor(model => model.CryptoPercentChargeAmount)
     </dt>
 
     <dd>
-        @Html.DisplayFor(model => model.CryptoPercentChargeAmmount)
+        @Html.DisplayFor(model => model.CryptoPercentChargeAmount)
     </dd>
 
 </dl>
