--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -21,9 +21,12 @@
 <div class="form-group">
     <label class="label-column">State: @Model.State.Name</label>
 </div>
-<div class="form-group">
-    <label class="label-column">City: @Model.City.Name</label>
-</div>
+@if (Model.City != null)
+{
+    <div class="form-group">
+        <label class="label-column">City: @Model.City.Name</label>
+    </div>
+}
 <div class="form-group">
     <label class="label-column">Created: @Model.CreatedAt</label>
 </div>
